# wikipe

./: Cargo.toml  LICENSE  README.md
assets/: wikipe-tan-ascii.txt
src/: args.rs  client.rs  main.rs  wikipe.rs
